...
                        app:defaultQueryHint="@string/search_tasks"
                        app:searchPrefixText=""
                        android:clickable="true"
                        android:focusable="true" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        style="@style/Widget.Material3.TabLayout.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginBottom="2dp"
                        app:tabTextColor="?attr/colorOnSurfaceVariant"
                        app:tabSelectedTextColor="?attr/colorPrimary"
...
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
...
